fixing mobile spacing on hero section v0.0.11

--- a/css/style.css
+++ b/css/style.css
@@ -635,7 +635,12 @@ body {
   position: relative;
 }
 
-@media only screen and (max-width: 767.99px), only screen and (min-width: 768px) and (max-width: 1198.99px) {
+@media only screen and (max-width: 767.99px) {
+  #hero {
+    margin-block-end: 6.5rem;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1198.99px) {
   #hero {
     margin-block-end: 10rem;
   }
